开发首页主要内容

--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -15,74 +15,143 @@
 <body>
 <!--Header -->
 <header id="header">
-        <h1 id="logo">
-            <a href="#">
-                <img src="../img/logo.png" alt="">
-            </a>
-        </h1>
-
-        <nav id="navBar" class="navBar">
-            <ul class="nav clearfix">
-                <li class="m">
-                    <h3><a target="_blank" href="#">网站首页</a></h3>
-                </li>
-                <li class="m">
-                    <h3><a target="_blank" href="#">服务项目</a></h3>
-                    <ul class="sub">
-                        <li><a href="#"> 专利咨询</a></li>
-                        <li><a href="#"> 商标注册</a></li>
-                        <li><a href="#"> 版权登记</a></li>
-                        <li><a href="#"> 项目申报</a></li>
-                    </ul>
-                </li>
-                <li class="m">
-                    <h3><a target="_blank" href="#">成功案例</a></h3>
-                    <ul class="sub double">
-                        <li><a href="#"> 高等教育</a></li>
-                        <li><a href="#"> 移动通信</a></li>
-                        <li><a href="#"> 加工制造</a></li>
-                        <li><a href="#"> 现代制药</a></li>
-                        <li><a href="#"> 贸易进出口</a></li>
-                        <li><a href="#"> 化学工艺</a></li>
-                        <li><a href="#"> 互联网科技</a></li>
-                        <li><a href="#"> 食品加工</a></li>
-                        <li><a href="#"> 工程建设</a></li>
-                        <li><a href="#"> 电子商务</a></li>
-                    </ul>
-                </li>
-                <li class="m">
-                    <h3><a target="_blank" href="#">傻鸟知服</a></h3>
-                </li>
-                <li class="m">
-                    <h3><a target="_blank" href="#">资讯中心</a></h3>
-                    <ul class="sub">
-                        <li><a href="#">企业动态</a></li>
-                        <li><a href="#">媒体关注</a></li>
-                        <li><a href="#">行业动态</a></li>
-                        <li><a href="#">技术成果鉴定</a></li>
-                    </ul>
-                </li>
-                <li class="m">
-                    <h3><a target="_blank" href="#">关于我们</a></h3>
-                    <ul class="sub">
-                        <li><a href="#">走进维正</a></li>
-                        <li><a href="#">维正文化</a></li>
-                        <li><a href="#">发展历程</a></li>
-                        <li><a href="#">维正团队</a></li>
-                    </ul>
-                </li>
-                <li class="m">
-                    <h3><a target="_blank" href="#">诚聘英才</a></h3>
-                </li>
-                <li class="m">
-                    <h3><a target="_blank" href="#">联系我们</a></h3>
-                </li>
-            </ul>
-            <span id="current"></span>
-        </nav>
+    <h1 id="logo">
+        <a href="#">
+            <img src="../img/logo.png" alt="">
+            <ins>维正集团</ins>
+        </a>
+    </h1>
+    <nav id="navBar" class="navBar">
+        <ul class="nav clearfix">
+            <li class="m">
+                <h3><a target="_blank" href="#">网站首页</a></h3>
+            </li>
+            <li class="m">
+                <h3><a target="_blank" href="#">服务项目</a></h3>
+                <ul class="sub">
+                    <li><a href="#"> 专利咨询</a></li>
+                    <li><a href="#"> 商标注册</a></li>
+                    <li><a href="#"> 版权登记</a></li>
+                    <li><a href="#"> 项目申报</a></li>
+                </ul>
+            </li>
+            <li class="m">
+                <h3><a target="_blank" href="#">成功案例</a></h3>
+                <ul class="sub double">
+                    <li><a href="#"> 高等教育</a></li>
+                    <li><a href="#"> 移动通信</a></li>
+                    <li><a href="#"> 加工制造</a></li>
+                    <li><a href="#"> 现代制药</a></li>
+                    <li><a href="#"> 贸易进出口</a></li>
+                    <li><a href="#"> 化学工艺</a></li>
+                    <li><a href="#"> 互联网科技</a></li>
+                    <li><a href="#"> 食品加工</a></li>
+                    <li><a href="#"> 工程建设</a></li>
+                    <li><a href="#"> 电子商务</a></li>
+                </ul>
+            </li>
+            <li class="m">
+                <h3><a target="_blank" href="#">傻鸟知服</a></h3>
+            </li>
+            <li class="m">
+                <h3><a target="_blank" href="#">资讯中心</a></h3>
+                <ul class="sub">
+                    <li><a href="#">企业动态</a></li>
+                    <li><a href="#">媒体关注</a></li>
+                    <li><a href="#">行业动态</a></li>
+                    <li><a href="#">技术成果鉴定</a></li>
+                </ul>
+            </li>
+            <li class="m">
+                <h3><a target="_blank" href="#">关于我们</a></h3>
+                <ul class="sub">
+                    <li><a href="#">走进维正</a></li>
+                    <li><a href="#">维正文化</a></li>
+                    <li><a href="#">发展历程</a></li>
+                    <li><a href="#">维正团队</a></li>
+                </ul>
+            </li>
+            <li class="m">
+                <h3><a target="_blank" href="#">诚聘英才</a></h3>
+                <ul class="sub">
+                    <li><a href="#">招聘职位</a></li>
+                    <li><a href="#">用人理念</a></li>
+                </ul>
+            </li>
+            <li class="m">
+                <h3><a target="_blank" href="#">联系我们</a></h3>
+            </li>
+        </ul>
+        <span id="current"></span>
+    </nav>
 </header>
 <!--Slide-->
-<section></section>
+<section>
+
+
+</section>
+
+<!-- SERVICE -->
+<section id="service" class="wrap text-center">
+    <section class="container text-center">
+        <figure class="title">
+            <figcaption>
+                <h3>
+                    服务项目·精益求精
+                </h3>
+            </figcaption>
+            <p>以客户需求为基础，以专业的服务，成就客户，即成维正！</p>
+        </figure>
+        <section class="service-list">
+            <ul class="clearfix">
+                <li>
+                    <div class="box">
+                        <span>
+                            <a href="#"></a>
+                        </span>
+                        <strong>专利咨询</strong>
+                        <p>一项发明创造由申请人向政府部门提出专利申请，经中华人民共和国国家知识产权局依照法定程序审查批准后。</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                        <span>
+                            <a href="#"></a>
+                        </span>
+                        <strong>商标注册</strong>
+                        <p>一项发明创造由申请人向政府部门提出专利申请，经中华人民共和国国家知识产权局依照法定程序审查批准后。</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                         <span>
+                             <a href="#"></a>
+                        </span>
+                        <strong>版权登记</strong>
+                        <p>一项发明创造由申请人向政府部门提出专利申请，经中华人民共和国国家知识产权局依照法定程序审查批准后。</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                         <span>
+                            <a href="#"></a>
+                        </span>
+                        <strong>项目申报</strong>
+                        <p>一项发明创造由申请人向政府部门提出专利申请，经中华人民共和国国家知识产权局依照法定程序审查批准后。</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </section>
+    <span class="more"><a href="#">more</a></span>
+</section>
+
+<!--PROJECT-->
+<section>
+
+
+</section>
+
 <!--Footer-->
 <footer id="main-footer">
     <section class="btm-nav clearfix">
@@ -121,7 +190,7 @@
     </section>
     <section class="btm-contact">
         <ul>
-            <li><a href="#" class="fb">QQ咨询</a></li>
+            <li><a href="#" class="fb">傻鸟知服</a></li>
             <li><a href="#" class="qq">QQ咨询</a></li>
             <li><a href="#" class="tel">24小时热线</a></li>
             <li><a href="#" class="wechat">官方微信</a></li>
