继续开发首页

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -146,10 +146,102 @@
     <span class="more"><a href="#">more</a></span>
 </section>
 
-<!--PROJECT-->
-<section>
+<!--PROJCET-->
+<section id="project" class="wrap text-center">
+    <figure class="title">
+        <figcaption>
+            <h3>
+                   成功案例·成就商业品牌
+            </h3>
+        </figcaption>
+        <p>您的眼光高度，决定您的品牌厚度</p>
+    </figure>
+    <section class="project-list">
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-01.jpg" width="384">
+                </a>
+                <section>
 
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-02.jpg" width="384">
+                </a>
+                <section>
 
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-03.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-04.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-05.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-06.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-07.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-08.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-09.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="../img/project/view-10.jpg" width="384">
+                </a>
+                <section>
+
+                </section>
+            </li>
+        </ul>
+
+        <span class="more"><a href="#">more</a></span>
+    </section>
 </section>
 
 <!--Footer-->
