--- a/src/html/index.html
+++ b/src/html/index.html
@@ -86,19 +86,28 @@
     </nav>
 </header>
 <!--Slide-->
-<section>
-
+<section id="slide">
+    <section class="out">
+        <ul class="img">
+            <li><a href="#"><img src="../img/focusImg/slide1.png" alt=""></a></li>
+            <li><a href="#"><img src="../img/focusImg/slide2.png" alt=""></a></li>
+            <li><a href="#"><img src="../img/focusImg/slide3.png" alt=""></a></li>
+        </ul>
+        <ul class="num">
+            <!--底部数字栏-->
+        </ul>
+        <!--<div class="left btn"><</div>-->
+        <!--<div class="right btn">></div>-->
+    </section>
 
 </section>
 
 <!-- SERVICE -->
-<section id="service" class="wrap text-center">
-    <section class="container text-center">
+<section id="service" class="wrap text-center hide">
+    <section class="container">
         <figure class="title">
             <figcaption>
-                <h3>
-                    服务项目·精益求精
-                </h3>
+                <h3>服务项目·精益求精</h3>
             </figcaption>
             <p>以客户需求为基础，以专业的服务，成就客户，即成维正！</p>
         </figure>
@@ -147,102 +156,206 @@
 </section>
 
 <!--PROJCET-->
-<section id="project" class="wrap text-center">
+<section id="project" class="wrap text-center hide">
     <figure class="title">
         <figcaption>
-            <h3>
-                   成功案例·成就商业品牌
-            </h3>
+            <h3>成功案例·成就商业品牌</h3>
         </figcaption>
         <p>您的眼光高度，决定您的品牌厚度</p>
     </figure>
-    <section class="project-list">
+    <section class="project-list text-left">
         <ul>
             <li>
-                <a href="#">
-                    <img src="../img/project/view-01.jpg" width="384">
-                </a>
-                <section>
-
+                <section class="show-img">
+                    <img src="../img/project/view-01.jpg"/>
                 </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
             </li>
             <li>
-                <a href="#">
-                    <img src="../img/project/view-02.jpg" width="384">
-                </a>
-                <section>
-
+                <section class="show-img">
+                    <img src="../img/project/view-02.jpg"/>
                 </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
             </li>
             <li>
-                <a href="#">
-                    <img src="../img/project/view-03.jpg" width="384">
-                </a>
-                <section>
-
+                <section class="show-img">
+                    <img src="../img/project/view-03.jpg"/>
                 </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
             </li>
             <li>
-                <a href="#">
-                    <img src="../img/project/view-04.jpg" width="384">
-                </a>
-                <section>
-
+                <section class="show-img">
+                    <img src="../img/project/view-04.jpg"/>
                 </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
             </li>
             <li>
-                <a href="#">
-                    <img src="../img/project/view-05.jpg" width="384">
-                </a>
-                <section>
-
+                <section class="show-img">
+                    <img src="../img/project/view-05.jpg"/>
                 </section>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../img/project/view-06.jpg" width="384">
-                </a>
-                <section>
-
-                </section>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../img/project/view-07.jpg" width="384">
-                </a>
-                <section>
-
-                </section>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../img/project/view-08.jpg" width="384">
-                </a>
-                <section>
-
-                </section>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../img/project/view-09.jpg" width="384">
-                </a>
-                <section>
-
-                </section>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../img/project/view-10.jpg" width="384">
-                </a>
-                <section>
-
-                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
             </li>
         </ul>
-
-        <span class="more"><a href="#">more</a></span>
+        <ul>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/view-06.jpg"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/view-07.jpg"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/view-08.jpg"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/view-09.jpg"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
+            </li>
+            <li>
+                <section class="show-img">
+                    <img src="../img/project/view-10.jpg"/>
+                </section>
+                <figure class="mask">
+                    <label> 成功案例--- </label>
+                    <section class="text">
+                        <label>高等教育</label>
+                        <p>
+                            信息化是当今时代发展的大趋势，涵盖新一代移动通信网络服务、下一代互联网服务、通信设备制造、高端计算机制造、高端电子设备和仪器制作技术的新一代信息技术产业蓬勃发展，并已经开始改变人们的生产方式和生活方式，其特征体现为虚拟性。
+                        </p>
+                        <p class="link"><a href="#"></a></p>
+                    </section>
+                </figure>
+            </li>
+        </ul>
     </section>
+    <span class="more"><a href="#">more</a></span>
 </section>
+
+<!--NEWS-->
+<section id="news" class="wrap hide">
+    <figure class="title text-center">
+        <figcaption>
+            <h3>我们的资讯·见证成长</h3>
+        </figcaption>
+        <p>您的眼光高度，决定您的品牌厚度</p>
+    </figure>
+</section>
+
+<!--ABOUT-->
+<section id="aboutUs" class="wrap hide">
+    <figure class="title reversion text-center">
+        <figcaption>
+            <h3>走进维正·专业、守信</h3>
+        </figcaption>
+        <p>我们用心服务，站在客户的角度做好美一个细节</p>
+    </figure>
+    <a href="#" class="container box">
+        <em class="arrow">&gt;&gt;</em>
+    </a>
+</section>
+
+<!--Client-->
+<section id="client" class="wrap">
+    <figure class="title  text-center">
+        <figcaption>
+            <h3>合作企业·风雨同行</h3>
+        </figcaption>
+        <p>我们用心服务，站在客户的角度做好美一个细节</p>
+    </figure>
+
+</section>
+
 
 <!--Footer-->
 <footer id="main-footer">
