--- a/src/html/index.html
+++ b/src/html/index.html
@@ -335,17 +335,159 @@
             </ul>
         </menu>
     </figure>
-    <section class="container tab-content">
-        <section>
-            <section>
-
+    <section class="container tab-content text-left clearfix">
+        <section class="tabslider">
+            <section class="last-news">
+                <section class="viewImg">
+                    <time>10<span>10月</span></time>
+                    <img src="../img/focusImg/slide1.png" alt="">
+                </section>
+                <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                <p>2016年10月8日，20多位维正新人在桑达科技大厦度过了一个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
             </section>
-        </section>
-        <ul>
-            <li>
+            <ul class="item4">
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
 
-            </li>
-        </ul>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+            </ul>
+        </section>
+        <section class="tabslider hide">
+            <ul class="item4">
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+            </ul>
+        </section>
+        <section class="tabslider hide">
+            <ul class="item4">
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+
+                <li>
+                    <section class="viewImg">
+                        <time>10<span>10月</span></time>
+                        <img src="../img/focusImg/slide1.png" alt="">
+                    </section>
+                    <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
+                    <p>2016年10月8日，20多位维正新人在桑个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
+                </li>
+            </ul>
+        </section>
     </section>
     <span class="more"><a href="#">more</a></span>
 </section>
@@ -371,6 +513,11 @@
         </figcaption>
         <p>我们用心服务，站在客户的角度做好美一个细节</p>
     </figure>
+
+    <section>
+
+    </section>
+
 </section>
 
 
@@ -426,6 +573,8 @@
 <script src="../js/plugins/SuperSlide.2.1.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/pages/index.js"></script>
+
+
 </body>
 
 </html>
