--- a/src/html/servicePro/index.html
+++ b/src/html/servicePro/index.html
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="no"/>
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
+    <link rel="stylesheet" href="../../css/style.css">
     <!--[if lt IE 9]>
     <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -91,10 +92,9 @@
 
 <!--Banner-->
 <section id="sv-banner">
-    <a href="#">
-        <img src="../../img/focusImg/slide1.png" class="block response-img" alt="">
-    </a>
+    <img src="../../img/focusImg/slide1.png" class="block" alt="">
 </section>
+
 
 <!--Content-->
 <article id="sv-content">
@@ -106,10 +106,10 @@
             <p>维正知识产权为您提供以下服务</p>
         </figure>
         <ul class="container">
-            <li class="current"><a href="../servicePro/index.html"><em class="icon-Q"></em><span>专利服务</span></a></li>
-            <li><a href="../servicePro/brandRegist.html"><em class="icon-C"></em><span>商标服务</span></a></li>
-            <li><a href="../servicePro/copyright.html"><em class="icon-P"></em><span>版权服务</span></a></li>
-            <li><a href="../servicePro/projectApplication.html"><em class="icon-E"></em><span>项目申报</span></a></li>
+            <li class="current"><a href="#"><em class="icon-Q"></em><span>专利服务</span></a></li>
+            <li><a href="#"><em class="icon-C"></em><span>商标服务</span></a></li>
+            <li><a href="#"><em class="icon-P"></em><span>版权服务</span></a></li>
+            <li><a href="#"><em class="icon-E"></em><span>项目申报</span></a></li>
         </ul>
     </header>
     
@@ -157,7 +157,7 @@
             <dd><i>04</i>监管国家审查 进展和费用情况</dd>
             <dd><i>05</i>审查意见答复</dd>
             <dd><i>06</i>授权缴费</dd>
-            <dd class="last">证书交给客户</dd>
+            <dd>证书交给客户</dd>
         </dl>
     </section>
     
