--- a/src/html/aboutUS/wzDevelopment.html
+++ b/src/html/aboutUS/wzDevelopment.html
@@ -45,15 +45,15 @@
                 <h3><a  href="../cases/index.html">成功案例</a></h3>
                 <ul class="sub">
                     <li><a href="../cases/index.html"> 高等教育</a></li>
-                    <li><a href="../cases/case1.html"> 移动通信</a></li>
-                    <li><a href="../cases/case2.html"> 加工制造</a></li>
-                    <li><a href="../cases/case3.html"> 现代制药</a></li>
-                    <li><a href="../cases/case4.html"> 贸易进出口</a></li>
-                    <li><a href="../cases/case5.html"> 化学工艺</a></li>
-                    <li><a href="../cases/case6.html"> 互联网科技</a></li>
-                    <li><a href="../cases/case7.html"> 食品加工</a></li>
-                    <li><a href="../cases/case8.html"> 工程建设</a></li>
-                    <li><a href="../cases/case9.html"> 电子商务</a></li>
+                    <li><a href="../cases/index.html"> 移动通信</a></li>
+                    <li><a href="../cases/index.html"> 加工制造</a></li>
+                    <li><a href="../cases/index.html"> 现代制药</a></li>
+                    <li><a href="../cases/index.html"> 贸易进出口</a></li>
+                    <li><a href="../cases/index.html"> 化学工艺</a></li>
+                    <li><a href="../cases/index.html"> 互联网科技</a></li>
+                    <li><a href="../cases/index.html"> 食品加工</a></li>
+                    <li><a href="../cases/index.html"> 工程建设</a></li>
+                    <li><a href="../cases/index.html"> 电子商务</a></li>
                 </ul>
             </li>
             <li>
