做完“AboutUS”前三块
但是出现冲突，“service“页面出现版本丢失

--- a/src/html/contactUs/index.html
+++ b/src/html/contactUs/index.html
@@ -44,16 +44,16 @@
             <li class="double">
                 <h3><a  href="../cases/index.html">成功案例</a></h3>
                 <ul class="sub">
-                    <li><a href="../cases/index.html"> 高等教育</a></li>
-                    <li><a href="../cases/case1.html"> 移动通信</a></li>
-                    <li><a href="../cases/case2.html"> 加工制造</a></li>
-                    <li><a href="../cases/case3.html"> 现代制药</a></li>
-                    <li><a href="../cases/case4.html"> 贸易进出口</a></li>
-                    <li><a href="../cases/case5.html"> 化学工艺</a></li>
-                    <li><a href="../cases/case6.html"> 互联网科技</a></li>
-                    <li><a href="../cases/case7.html"> 食品加工</a></li>
-                    <li><a href="../cases/case8.html"> 工程建设</a></li>
-                    <li><a href="../cases/case9.html"> 电子商务</a></li>
+                    <li><a href="../cases/index.html#floor1">高等教育</a></li>
+                    <li><a href="../cases/index.html#floor2">移动通信</a></li>
+                    <li><a href="../cases/index.html#floor3">加工制造</a></li>
+                    <li><a href="../cases/index.html#floor4">现代制药</a></li>
+                    <li><a href="../cases/index.html#floor5">贸易进出口</a></li>
+                    <li><a href="../cases/index.html#floor6">化学工艺</a></li>
+                    <li><a href="../cases/index.html#floor7">互联网科技</a></li>
+                    <li><a href="../cases/index.html#floor8">食品加工</a></li>
+                    <li><a href="../cases/index.html#floor9">工程建设</a></li>
+                    <li><a href="../cases/index.html#floor10">电子商务</a></li>
                 </ul>
             </li>
             <li>
