--- a/src/html/servicePro/index.html
+++ b/src/html/servicePro/index.html
@@ -35,7 +35,7 @@
                 <h3 class="active"><a href="../servicePro/index.html">服务项目</a></h3>
                 <ul class="sub">
                     <li><a href="../servicePro/index.html"> 专利咨询</a></li>
-                    <li><a href="brandRegist.html"> 商标注册</a></li>
+                    <li><a href="../servicePro/brandRegist.html"> 商标注册</a></li>
                     <li><a href="../servicePro/copyright.html"> 版权登记</a></li>
                     <li><a href="../servicePro/projectApplication.html"> 项目申报</a></li>
                 </ul>
